@@ -1,3 +1,24 @@
+# 
+    if ( $self->index\_property and "$uri" eq ($self->base\_uri // $req->base) ) {
+        my $subject   = iri( $uri );
+        my $predicate = $self->index\_property;
+        my @stms;
+        # TODO
+        opendir(my $dirhandle, $dir);
+        foreach my $p (readdir $dirhandle) {
+            next unless -d catdir( $dir, $p ) and $p !~ /^\\.\\.?$/;
+            push @stms, statement(
+                $subject,
+                $predicate,
+                RDF::Trine::Node::Resource->new( "$uri$p" )
+            );
+        }
+        closedir $dirhandle;
+
+        my $i2 = RDF::Trine::Iterator::Graph->new( \@stms );
+        $iterator = $iterator->concat( $i2 );
+    }
+
 # NAME
 
 Plack::App::RDF::Files - serve RDF data from files
@@ -25,6 +46,9 @@ This [PSGI](https://metacpan.org/pod/PSGI) application serves RDF from files. Ea
 corresponds to a (sub)directory, located in a common based directory. All RDF
 files in a directory are merged and returned as RDF graph.
 
+HTTP HEAD and conditional GET requests are supported by ETag and
+Last-Modified-Headers (see also [Plack::Middleware::ConditionalGET](https://metacpan.org/pod/Plack::Middleware::ConditionalGET)).
+
 # CONFIGURATION
 
 - base\_dir
@@ -38,19 +62,18 @@ files in a directory are merged and returned as RDF graph.
 
 - file\_types
 
-    An array of RDF file types (extensions) to look for. Set to
+    An array of RDF file types, given as extensions to look for. Set to
     `['rdfxml','nt','ttl']` by default.
 
-- include\_index
+- index\_property
 
     By default a HTTP 404 error is returned if one tries to access the base
     directory. Enable this option to also serve RDF data from this location.
 
-- index\_property
-
     RDF property to use for listing all resources connected to the base URI (if
-    <include\_index> is enabled).  Set to `rdfs:seeAlso` by default. Can be
-    disabled by setting a false value.
+    <include\_index> is enabled).  Set to `rdfs:seeAlso` if set to 1.
+
+    _This feature is currently disabled_
 
 - path\_map
 
@@ -62,18 +85,6 @@ files in a directory are merged and returned as RDF graph.
     Optional namespaces for serialization, passed to [RDF::Trine::Serializer](https://metacpan.org/pod/RDF::Trine::Serializer).
 
 # METHODS
-
-## files( $env | $req | $str )
-
-Get a list of RDF files that will be read for a given request. The request can
-be specified as [PSGI](https://metacpan.org/pod/PSGI) environment, as [Plack::Request](https://metacpan.org/pod/Plack::Request), or as partial URI
-that follows `base_uri` (given as string). The requested URI is saved in field
-`rdf.uri` of the request environment.  On success returns the base directory
-and a list of files, each mapped to its last modification time.  Undef is
-returned if the request contained invalid characters (everything but
-`a-zA-Z0-9:.@/-` and the forbidden sequence `../` or a sequence starting with
-`/`) or if the request equals ro the base URI and `include_index` was not
-enabled.
 
 ## call( $env )
 
@@ -102,13 +113,23 @@ application.
 If an existing resource does not contain triples, the axiomatic triple
 `$uri rdf:type rdfs:Resource` is returned.
 
-## negotiate( $env )
+## files( $env )
 
-This internal methods selects an RDF serializer based on the PSGI environment 
-variable `negotiate.format` (see [Plack::Middleware::Negotiate](https://metacpan.org/pod/Plack::Middleware::Negotiate)) or the 
-`negotiate` method of [RDF::Trine::Serializer](https://metacpan.org/pod/RDF::Trine::Serializer). Returns first a 
-[RDF::Trine::Serializer](https://metacpan.org/pod/RDF::Trine::Serializer) on success or `undef` on error) and second a 
-(possibly empty) list of HTTP response headers.
+Get a list of RDF files (as hash reference) that will be read for a given
+request, given as [PSGI](https://metacpan.org/pod/PSGI) environment.
+
+The requested URI is saved in field `rdf.uri` of the request environment.  On
+success returns the base directory and a list of files, each mapped to its last
+modification time.  Undef is returned if the request contained invalid
+characters (everything but `a-zA-Z0-9:.@/-` and the forbidden sequence `../`
+or a sequence starting with `/`) or if the request equals ro the base URI and
+`include_index` was not enabled.
+
+## headers 
+
+Get a response headers object (as provided by [Plack::Util](https://metacpan.org/pod/Plack::Util)::headers) with
+ETag and Last-Modified from a list of RDF files given as returned by the files
+method.
 
 # SEE ALSO
 
