@@ -1,5 +1,8 @@
 requires 'perl', '5.10.0';
 
 requires 'Plack';
+requires 'Moo';
 requires 'RDF::Trine';
 requires 'HTTP::Date';
+
+test_requires 'HTTP::Request::Common';
