@@ -8,15 +8,27 @@ use HTTP::Request::Common;
 use Plack::App::RDF::Files;
 
 my $app = Plack::App::RDF::Files->new(
-    base_dir => './t/data',
+    base_dir => 't/data',
     base_uri => 'http://example.org/'
 );
 
 test_psgi $app, sub {
-    my $cb = shift;
+    my ($cb, $res) = @_;
 
-    my $res = $cb->(GET "/xxx");
+    $res = $cb->(GET "/xxx");
     is $res->code, 404, "not found";
+
+    $res = $cb->(HEAD "/alice");
+    is $res->code, 200, 'HEAD ok';
+
+    $res = $cb->(GET "/alice", 'If-None-Match' => $res->header('ETag'));
+    is $res->code, 304, 'ETag 304 Not Modified';
+
+    foreach my $type (qw(text/turtle application/rdf+xml application/x-rdf+json)) {
+        $res = $cb->(HEAD "/alice", Accept => $type);
+        is $res->code, 200, 'HEAD ok';
+        is $res->header('content-type'), $type, "HEAD $type";
+    }
 
     $res = $cb->(GET "/alice");
     is $res->code, 200;
@@ -36,14 +48,8 @@ test_psgi $app, sub {
         "<http://example.org/foo/bar> <http://www.w3.org/2000/01/rdf-schema#type> <http://example.org/Thing> .\n";
 };
 
-# test env
-#my $stack = builder {
-#    sub {
-#        # TODO: test $env after processing
-#    };
-#    $app;
-#};
-#$stack->call(...)
+# TODO: test with Unicode
+# TODO: test env
 
 =head1
 $app = Plack::App::RDF::Files->new( base_dir => 't' );
@@ -61,7 +67,7 @@ test_psgi $app, sub {
     }
 };
 
-$app = Plack::App::RDF::Files->new( base_dir => 't', include_index => 1 );
+$app = Plack::App::RDF::Files->new( base_dir => 't', index_property => 1 );
 
 test_psgi $app, sub {
 	my $cb  = shift;
